--- a/VisitingCategories/en.lproj/MainStoryboard.storyboard
+++ b/VisitingCategories/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,84 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="DHViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VHS-9g-jCw">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="4j6-a8-45u"/>
+                                    <constraint firstAttribute="height" constant="44" id="WTl-wS-4SF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Deploy!">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Guns" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3I-Ko-kEU">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Power" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBR-r4-ew0">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="oqb-Y0-WCF"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XX0-8W-Xcc">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tKh-Fg-Sx5">
+                                <items/>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mBR-r4-ew0" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="0eH-J3-3HK"/>
+                            <constraint firstItem="T3I-Ko-kEU" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="1zR-p8-suk"/>
+                            <constraint firstItem="XX0-8W-Xcc" firstAttribute="centerY" secondItem="oqb-Y0-WCF" secondAttribute="centerY" type="default" id="32E-Zx-ELS"/>
+                            <constraint firstItem="XX0-8W-Xcc" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="3eO-XO-7MR"/>
+                            <constraint firstItem="tKh-Fg-Sx5" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="7Sk-oO-4xF"/>
+                            <constraint firstItem="mBR-r4-ew0" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="9Z9-bh-wK4"/>
+                            <constraint firstItem="oqb-Y0-WCF" firstAttribute="leading" secondItem="XX0-8W-Xcc" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Fxa-Pw-WIy"/>
+                            <constraint firstItem="tKh-Fg-Sx5" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="Kyj-B5-6el"/>
+                            <constraint firstItem="VHS-9g-jCw" firstAttribute="top" secondItem="3" secondAttribute="top" constant="80" id="QaE-16-ksA"/>
+                            <constraint firstItem="T3I-Ko-kEU" firstAttribute="top" secondItem="3" secondAttribute="top" constant="91" id="TXu-3f-qRB"/>
+                            <constraint firstItem="VHS-9g-jCw" firstAttribute="leading" secondItem="T3I-Ko-kEU" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="eIK-ZT-7jp"/>
+                            <constraint firstItem="mBR-r4-ew0" firstAttribute="trailing" secondItem="T3I-Ko-kEU" secondAttribute="trailing" type="default" id="ez4-yC-cOM"/>
+                            <constraint firstItem="T3I-Ko-kEU" firstAttribute="baseline" secondItem="VHS-9g-jCw" secondAttribute="baseline" type="default" id="h43-HL-AFv"/>
+                            <constraint firstItem="tKh-Fg-Sx5" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="lRP-eQ-wVa"/>
+                            <constraint firstAttribute="trailing" secondItem="VHS-9g-jCw" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rEM-BU-w0f"/>
+                            <constraint firstAttribute="trailing" secondItem="oqb-Y0-WCF" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rw2-ms-cdB"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="DHViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DHViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
